Fix transparent background annoyance for YouTube dark mode (in default view)

--- a/github.com/buffermet/darkmode/websites/youtube.com/dark.css
+++ b/github.com/buffermet/darkmode/websites/youtube.com/dark.css
@@ -8,3 +8,7 @@ html[dark],
 [dark] {
 	--yt-spec-base-background: black;
 }
+
+#cinematics > div > div {
+	opacity: 0;
+}
